Fix images loading Blogpage via logged in user. Admin needs to approve fix. Fix button & add overflow: hidden for white space

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,6 +9,7 @@ body {
     background-color: black;
     color: white;
     font-family: 'Convergence', sans-serif;
+    overflow: hidden;
 }
 
 .brand {
